--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.css
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.css
         " rel="stylesheet">
   </head>
   <body>
